dataframe count nulls method

--- a/analises.ipynb
+++ b/analises.ipynb
@@ -2,18 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "DataQuality.__init__() got an unexpected keyword argument 'encoding'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdataquality\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataQuality \u001b[38;5;28;01mas\u001b[39;00m dq\n\u001b[0;32m----> 3\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mdq\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdatasets/destinations.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m df\u001b[38;5;241m.\u001b[39mdf_head()\n",
-      "\u001b[0;31mTypeError\u001b[0m: DataQuality.__init__() got an unexpected keyword argument 'encoding'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame Completo:\n",
+      "╒════╤═══════════════╤══════════╤═══════════╤════════════╤════════════╤═════════════╤═══════════════════════════════╤════════════╤═════════════════════╤══════════════════════════════╤════════════╤═══════════════════════════════════════╤══════════════════╤═══════════════════════════════════════════════╤══════════════════════════════════════════════════════════════════════════════════════════════════════╤════════════════════════════════════════════════════════════════════════════════════════╕\n",
+      "│    │ Destination   │ Region   │ Country   │ Category   │   Latitude │   Longitude │ Approximate Annual Tourists   │ Currency   │ Majority Religion   │ Famous Foods                 │ Language   │ Best Time to Visit                    │ Cost of Living   │ Safety                                        │ Cultural Significance                                                                                │ Description                                                                            │\n",
+      "╞════╪═══════════════╪══════════╪═══════════╪════════════╪════════════╪═════════════╪═══════════════════════════════╪════════════╪═════════════════════╪══════════════════════════════╪════════════╪═══════════════════════════════════════╪══════════════════╪═══════════════════════════════════════════════╪══════════════════════════════════════════════════════════════════════════════════════════════════════╪════════════════════════════════════════════════════════════════════════════════════════╡\n",
+      "│  0 │ Rome          │ Lazio    │ Italy     │ City       │    41.9028 │    12.4964  │ 14 million                    │ Euro       │ Roman Catholic      │ Pizza, Pasta, Gelato         │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ Medium-high      │ Generally safe, but watch out for pickpockets │ The capital city, known for its historical landmarks like the Colosseum, Vatican City, and Pantheon. │ A hub of ancient history and modern culture, with rich traditions, art, and landmarks. │\n",
+      "├────┼───────────────┼──────────┼───────────┼────────────┼────────────┼─────────────┼───────────────────────────────┼────────────┼─────────────────────┼──────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼───────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│  1 │ Florence      │ Tuscany  │ Italy     │ City       │    43.7696 │    11.2558  │ 10 million                    │ Euro       │ Roman Catholic      │ Pizza, Pasta, Gelato         │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ Medium-high      │ Generally safe, but watch out for pickpockets │ A Renaissance city famous for its art, architecture, and historical significance.                    │ Home to world-class museums, including the Uffizi Gallery and Michelangelo?s David.    │\n",
+      "├────┼───────────────┼──────────┼───────────┼────────────┼────────────┼─────────────┼───────────────────────────────┼────────────┼─────────────────────┼──────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼───────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│  2 │ Venice        │ Veneto   │ Italy     │ City       │    45.4356 │    12.3362  │ 10 million                    │ Euro       │ Roman Catholic      │ Pizza, Pasta, Gelato         │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ Medium-high      │ Generally safe, but watch out for pickpockets │ A unique city built on canals, known for its gondolas, Piazza San Marco, and Doge's Palace.          │ An iconic city of water, renowned for romantic gondola rides and historic landmarks.   │\n",
+      "├────┼───────────────┼──────────┼───────────┼────────────┼────────────┼─────────────┼───────────────────────────────┼────────────┼─────────────────────┼──────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼───────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│  3 │ Milan         │ Lombardy │ Italy     │ City       │    45.4646 │     9.18854 │ 7 million                     │ Euro       │ Roman Catholic      │ Risotto, Ossobuco, Panettone │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ High             │ Generally safe, but watch out for pickpockets │ A fashion capital known for its shopping, museums, and historical landmarks.                         │ A modern city with an ancient soul, featuring La Scala and the Duomo di Milano.        │\n",
+      "├────┼───────────────┼──────────┼───────────┼────────────┼────────────┼─────────────┼───────────────────────────────┼────────────┼─────────────────────┼──────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼───────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│  4 │ Naples        │ Campania │ Italy     │ City       │    40.8513 │    14.2547  │ 5 million                     │ Euro       │ Roman Catholic      │ Pizza, Pasta, Cannoli        │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ Medium           │ Generally safe, but be aware of pickpockets   │ A vibrant city known for its delicious food, historical sites, and stunning coastline.               │ Famous for pizza, Pompeii, and proximity to the Amalfi Coast.                          │\n",
+      "╘════╧═══════════════╧══════════╧═══════════╧════════════╧════════════╧═════════════╧═══════════════════════════════╧════════════╧═════════════════════╧══════════════════════════════╧════════════╧═══════════════════════════════════════╧══════════════════╧═══════════════════════════════════════════════╧══════════════════════════════════════════════════════════════════════════════════════════════════════╧════════════════════════════════════════════════════════════════════════════════════════╛\n",
+      "\n",
+      "DataFrame Categórico:\n",
+      "╒════╤═══════════════╤══════════╤═══════════╤════════════╤═══════════════════════════════╤════════════╤═════════════════════╤══════════════════════════════╤════════════╤═══════════════════════════════════════╤══════════════════╤═══════════════════════════════════════════════╤══════════════════════════════════════════════════════════════════════════════════════════════════════╤════════════════════════════════════════════════════════════════════════════════════════╕\n",
+      "│    │ Destination   │ Region   │ Country   │ Category   │ Approximate Annual Tourists   │ Currency   │ Majority Religion   │ Famous Foods                 │ Language   │ Best Time to Visit                    │ Cost of Living   │ Safety                                        │ Cultural Significance                                                                                │ Description                                                                            │\n",
+      "╞════╪═══════════════╪══════════╪═══════════╪════════════╪═══════════════════════════════╪════════════╪═════════════════════╪══════════════════════════════╪════════════╪═══════════════════════════════════════╪══════════════════╪═══════════════════════════════════════════════╪══════════════════════════════════════════════════════════════════════════════════════════════════════╪════════════════════════════════════════════════════════════════════════════════════════╡\n",
+      "│  0 │ Rome          │ Lazio    │ Italy     │ City       │ 14 million                    │ Euro       │ Roman Catholic      │ Pizza, Pasta, Gelato         │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ Medium-high      │ Generally safe, but watch out for pickpockets │ The capital city, known for its historical landmarks like the Colosseum, Vatican City, and Pantheon. │ A hub of ancient history and modern culture, with rich traditions, art, and landmarks. │\n",
+      "├────┼───────────────┼──────────┼───────────┼────────────┼───────────────────────────────┼────────────┼─────────────────────┼──────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼───────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│  1 │ Florence      │ Tuscany  │ Italy     │ City       │ 10 million                    │ Euro       │ Roman Catholic      │ Pizza, Pasta, Gelato         │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ Medium-high      │ Generally safe, but watch out for pickpockets │ A Renaissance city famous for its art, architecture, and historical significance.                    │ Home to world-class museums, including the Uffizi Gallery and Michelangelo?s David.    │\n",
+      "├────┼───────────────┼──────────┼───────────┼────────────┼───────────────────────────────┼────────────┼─────────────────────┼──────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼───────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│  2 │ Venice        │ Veneto   │ Italy     │ City       │ 10 million                    │ Euro       │ Roman Catholic      │ Pizza, Pasta, Gelato         │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ Medium-high      │ Generally safe, but watch out for pickpockets │ A unique city built on canals, known for its gondolas, Piazza San Marco, and Doge's Palace.          │ An iconic city of water, renowned for romantic gondola rides and historic landmarks.   │\n",
+      "├────┼───────────────┼──────────┼───────────┼────────────┼───────────────────────────────┼────────────┼─────────────────────┼──────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼───────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│  3 │ Milan         │ Lombardy │ Italy     │ City       │ 7 million                     │ Euro       │ Roman Catholic      │ Risotto, Ossobuco, Panettone │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ High             │ Generally safe, but watch out for pickpockets │ A fashion capital known for its shopping, museums, and historical landmarks.                         │ A modern city with an ancient soul, featuring La Scala and the Duomo di Milano.        │\n",
+      "├────┼───────────────┼──────────┼───────────┼────────────┼───────────────────────────────┼────────────┼─────────────────────┼──────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼───────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│  4 │ Naples        │ Campania │ Italy     │ City       │ 5 million                     │ Euro       │ Roman Catholic      │ Pizza, Pasta, Cannoli        │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ Medium           │ Generally safe, but be aware of pickpockets   │ A vibrant city known for its delicious food, historical sites, and stunning coastline.               │ Famous for pizza, Pompeii, and proximity to the Amalfi Coast.                          │\n",
+      "╘════╧═══════════════╧══════════╧═══════════╧════════════╧═══════════════════════════════╧════════════╧═════════════════════╧══════════════════════════════╧════════════╧═══════════════════════════════════════╧══════════════════╧═══════════════════════════════════════════════╧══════════════════════════════════════════════════════════════════════════════════════════════════════╧════════════════════════════════════════════════════════════════════════════════════════╛\n",
+      "\n",
+      "DataFrame Numérico:\n",
+      "╒════╤════════════╤═════════════╕\n",
+      "│    │   Latitude │   Longitude │\n",
+      "╞════╪════════════╪═════════════╡\n",
+      "│  0 │    41.9028 │    12.4964  │\n",
+      "├────┼────────────┼─────────────┤\n",
+      "│  1 │    43.7696 │    11.2558  │\n",
+      "├────┼────────────┼─────────────┤\n",
+      "│  2 │    45.4356 │    12.3362  │\n",
+      "├────┼────────────┼─────────────┤\n",
+      "│  3 │    45.4646 │     9.18854 │\n",
+      "├────┼────────────┼─────────────┤\n",
+      "│  4 │    40.8513 │    14.2547  │\n",
+      "╘════╧════════════╧═════════════╛\n"
      ]
     }
    ],
@@ -21,7 +60,60 @@
     "from dataquality import DataQuality as dq\n",
     "\n",
     "df = dq(\"datasets/destinations.csv\")\n",
-    "df.df_head()"
+    "df.header()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Quantidade de Nulos:\n",
+      "╒════╤═════════════════════════════╤══════════════╕\n",
+      "│    │ Coluna                      │   Quantidade │\n",
+      "╞════╪═════════════════════════════╪══════════════╡\n",
+      "│  0 │ Destination                 │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  1 │ Region                      │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  2 │ Country                     │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  3 │ Category                    │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  4 │ Latitude                    │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  5 │ Longitude                   │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  6 │ Approximate Annual Tourists │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  7 │ Currency                    │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  8 │ Majority Religion           │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  9 │ Famous Foods                │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 10 │ Language                    │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 11 │ Best Time to Visit          │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 12 │ Cost of Living              │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 13 │ Safety                      │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 14 │ Cultural Significance       │            0 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 15 │ Description                 │           50 │\n",
+      "╘════╧═════════════════════════════╧══════════════╛\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.count_nulls()"
    ]
   }
  ],
