--- a/analises.ipynb
+++ b/analises.ipynb
@@ -115,6 +115,59 @@
    "source": [
     "df.count_nulls()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Quantidade de Dados Únicos:\n",
+      "╒════╤═════════════════════════════╤══════════════╕\n",
+      "│    │ Coluna                      │   Quantidade │\n",
+      "╞════╪═════════════════════════════╪══════════════╡\n",
+      "│  0 │ Destination                 │          208 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  1 │ Region                      │          138 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  2 │ Country                     │           21 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  3 │ Category                    │           49 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  4 │ Latitude                    │          182 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  5 │ Longitude                   │          184 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  6 │ Approximate Annual Tourists │           35 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  7 │ Currency                    │           12 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  8 │ Majority Religion           │           10 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│  9 │ Famous Foods                │           66 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 10 │ Language                    │           27 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 11 │ Best Time to Visit          │           14 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 12 │ Cost of Living              │            6 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 13 │ Safety                      │            9 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 14 │ Cultural Significance       │          208 │\n",
+      "├────┼─────────────────────────────┼──────────────┤\n",
+      "│ 15 │ Description                 │          159 │\n",
+      "╘════╧═════════════════════════════╧══════════════╛\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.count_unique()"
+   ]
   }
  ],
  "metadata": {
